--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "homepage": "http://wysMyFree.github.io/myReactApp",
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
+    "node-sass": "^4.13.0",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
