--- a/package.json
+++ b/package.json
@@ -4,20 +4,29 @@
   "private": true,
   "homepage": "http://wysMyFree.github.io/myReactApp",
   "dependencies": {
+    "@navjobs/upload": "^3.2.0",
+    "antd": "^4.2.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
+    "date-fns": "^2.14.0",
+    "emoji-mart": "^3.0.0",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
+    "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-string-replace": "^0.4.4",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "socket.io-client": "^2.3.0",
+    "tinycolor2": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
